--- a/index.html
+++ b/index.html
@@ -1766,11 +1766,17 @@
             ctx.arc(111, 274, 4, 0, Math.PI * 2);
             ctx.fill();
 
-            ctx.font = '10px monospace';
-            ctx.fillStyle = '#06b6d4';
-            ctx.fillText('$ npm run deploy --production', 85, 295);
+            ctx.font = '12px monospace';
             ctx.fillStyle = '#10b981';
-            ctx.fillText('✓ Deployed successfully to techflow.solutions', 85, 308);
+            ctx.fillText('$ echo "Interested in AI?"', 85, 293);
+            ctx.fillStyle = '#f1f5f9';
+            ctx.fillText('Interested in AI?', 85, 308);
+
+            // Blinking cursor
+            if (Math.floor(time / 500) % 2 === 0) {
+                ctx.fillStyle = '#10b981';
+                ctx.fillRect(200, 298, 8, 14);
+            }
 
             screenTexture.needsUpdate = true;
         }
